feat: Complete SteveSystem with original cascade seesaw
- Restore original cascade_seesaw.html with full functionality
- Add complete voice studio with frontend and YouTube downloader
- Include all analysis tools (contra, BSI re-path, validation)
- Add trading dashboard and domain analysis
- Complete meta content orchestrator with voice generation
- All components working and integrated

--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
         }
 
         function openDashboard() {
-            window.open('unified_dashboard.html', '_blank');
+            window.open('trading_dashboard/dashboard.html', '_blank');
         }
 
         // Initialize on load
