--- a/launch.html
+++ b/launch.html
@@ -10,21 +10,18 @@
     <div class="text-center">
         <h1 class="text-4xl font-bold mb-8">SteveSystem Launcher</h1>
         <div class="space-y-4">
-            <a href="index.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded block">
+            <a href="/index.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
                 Open Master Dashboard
             </a>
-            <a href="unified_dashboard.html" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded block">
+            <a href="/trading_dashboard/dashboard.html" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded">
                 Open Trading Dashboard
             </a>
-            <a href="big_picture_dashboard.html" class="bg-purple-500 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded block">
-                Open Big Picture Tracker
-            </a>
-            <a href="unified_dashboard.html" class="bg-indigo-500 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded block">
-                Open Unified Dashboard
-            </a>
-            <a href="cascade_seesaw.html" class="bg-orange-500 hover:bg-orange-700 text-white font-bold py-2 px-4 rounded block">
-                Open Cascade Seesaw (BSI Weighting)
-            </a>
+                <a href="/big_picture_dashboard.html" class="bg-purple-500 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded">
+                    Open Big Picture Tracker
+                </a>
+                <a href="/unified_dashboard.html" class="bg-indigo-500 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded">
+                    Open Unified Dashboard
+                </a>
         </div>
     </div>
 </body>
