Complete Master Dashboard overhaul: interactive PNL calendar, editable priorities with day tracking, daily capital navigation, comprehensive trading journal with bet slip integration

--- a/big_picture_dashboard.html
+++ b/big_picture_dashboard.html
@@ -42,6 +42,10 @@
 
             <!-- Navigation -->
             <div class="flex flex-wrap gap-2 mb-8 justify-center">
+                <button onclick="window.location.href='launch.html'" class="tab-inactive flex items-center gap-2 px-4 py-2 rounded-lg font-medium transition-all bg-blue-600 text-white hover:bg-blue-700">
+                    <i data-lucide="home" class="w-4 h-4"></i>
+                    🏠 Launcher
+                </button>
                 <button id="pnl-tab" class="tab-active flex items-center gap-2 px-4 py-2 rounded-lg font-medium transition-all">
                     <i data-lucide="calendar" class="w-4 h-4"></i>
                     PNL Calendar
