Fix day navigation: add dynamic date handling for capital chart and priorities, add Cascade Scale to launcher

--- a/cascade_seesaw.html
+++ b/cascade_seesaw.html
@@ -33,6 +33,11 @@
         
         <!-- Header -->
         <div class="text-center mb-6">
+            <div class="flex justify-end mb-4">
+                <button onclick="window.location.href='launch.html'" class="bg-gray-700 hover:bg-gray-600 text-white font-semibold py-2 px-4 rounded-lg transition-colors flex items-center gap-2">
+                    <span>🏠</span> Back to Launcher
+                </button>
+            </div>
             <h1 class="text-4xl font-bold text-white mb-2">CASCADE COMPLETION SEESAW</h1>
             <p class="text-purple-300 text-lg">Reactive cascade balancing - adjust completion levels in real-time</p>
         </div>
