--- a/launch.html
+++ b/launch.html
@@ -9,17 +9,20 @@
 <body class="bg-gray-900 text-white flex items-center justify-center h-screen">
     <div class="text-center">
         <h1 class="text-4xl font-bold mb-8">SteveSystem Launcher</h1>
-        <div class="space-y-4 flex flex-col items-center">
-            <a href="index.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded block">
-                Open Master Dashboard
-            </a>
-            <a href="trading%20dashbaord/dashboard" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded block">
-                Open Trading Dashboard
-            </a>
-            <a href="big_picture_dashboard.html" class="bg-purple-500 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded block">
-                Open Big Picture Tracker
-            </a>
-        </div>
+            <div class="space-y-4 flex flex-col items-center">
+                <a href="index.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded block">
+                    Open Master Dashboard
+                </a>
+                <a href="trading%20dashbaord/dashboard" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded block">
+                    Open Trading Dashboard
+                </a>
+                <a href="big_picture_dashboard.html" class="bg-purple-500 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded block">
+                    Open Big Picture Tracker
+                </a>
+                <a href="cascade_seesaw.html" class="bg-pink-500 hover:bg-pink-700 text-white font-bold py-2 px-4 rounded block">
+                    Open Cascade Scale
+                </a>
+            </div>
     </div>
 </body>
 </html> 
