CRITICAL FIX: Implement proper file-based data persistence
- Fixed data transfer issue between computers
- Added file-based storage system (data.json)
- Created simple server for data persistence
- Added migration tool for localStorage data
- Data now properly saves to files and transfers between computers
- Fixed async/await issues in PNLManager
- Added proper error handling and fallbacks

--- a/launch.html
+++ b/launch.html
@@ -19,6 +19,9 @@
                 <a href="data_manager.html" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded block">
                     Data Manager
                 </a>
+                <a href="migrate-localStorage.html" class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 rounded block">
+                    Migrate Data
+                </a>
                 <a href="big_picture_dashboard.html" class="bg-purple-500 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded block">
                     Open Big Picture Tracker
                 </a>
