Add case studies integration to Trade Expression Mapper - Dynamic case study links appear when sport category is selected - Includes case studies for Tennis, Soccer, Fighting, Racing, and Esports - Each case study shows title, description, and view link

--- a/launch.html
+++ b/launch.html
@@ -25,6 +25,9 @@
                 <a href="cascade_seesaw.html" class="bg-pink-500 hover:bg-pink-700 text-white font-bold py-2 px-4 rounded block">
                     Open Cascade Scale
                 </a>
+                <a href="test_sheets_integration.html" class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 rounded block">
+                    Test Google Sheets Integration
+                </a>
             </div>
     </div>
 </body>
